pr: fix for int==0 comparison bug